test/typecheck/fail/mapping_two_type.sail
default Order dec

$include <prelude.sail>

val foo : int <-> unit

mapping foo : unit <-> int = { 0 <-> () }
